<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/opt_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/del_btn"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/btn"
                android:visibility="gone"
                app:icon="@drawable/round_delete_24"
                tools:text="Delete (23) item" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_btn"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/btn"
                android:text="@string/cancel_lb"
                android:visibility="gone" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_margin="4dp"

                android:contentDescription="@string/btn"
                android:text="@string/all_lb"
                android:visibility="gone"
                tools:text="All" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/word_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opt_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_btn"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/float_btn_des"
        android:src="@drawable/round_add_24" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>