<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AddNoteFragment">

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subj_f"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:hint="@string/subject"
            app:counterEnabled="true"
            app:counterMaxLength="50">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subj_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cont_f"
            style="@style/ThemeOverlay.Material3.TextInputEditText.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:hint="@string/content"
            app:counterEnabled="true"
            app:counterMaxLength="500">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cont_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="20" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="100dp"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@id/sp_bar" />

    <HorizontalScrollView
        android:id="@+id/sp_bar"
        style="@style/ModalBottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:elevation="0dp"
            android:orientation="horizontal"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bold_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/btn"
                app:icon="@drawable/round_format_bold_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/italic_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/btn"
                app:icon="@drawable/round_format_italic_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/underline_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/btn"
                app:icon="@drawable/round_format_underlined_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/centered_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/btn"
                app:icon="@drawable/round_format_align_center_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/left_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/btn"
                app:icon="@drawable/round_format_align_left_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/right_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/btn"
                app:icon="@drawable/round_format_align_right_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_img_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/btn"
                app:icon="@drawable/round_insert_photo_24" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adjust_color_btn"
                style="@style/Widget.Material3.Button.IconButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/btn"
                app:icon="@drawable/round_format_color_text_24" />
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
